* Tue Mar 10 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
- Added support for EL8
- Dropped support for EL6
- Refactored the module.  Notable feature/API changes:
  - Updated autofs service configuration to use /etc/autofs.conf in
    addition to /etc/sysconfig/autofs.
  - Updated autofs.master to load content from /etc/auto.master.simp.d/
    and /etc/auto.master.d/ in lieu of specifying map entries directly.
    - auto.master entries are now written to files in /etc/auto.master.simp.d,
      a directory fully managed by this module.
    - /etc/auto.master.d is left unmanaged by Puppet.
  - Added a autofs::map defined type that allows the user to specify all
    the parameters for a 'file' map in once place.  This resource will
    generate the appropriate resources to create both the auto.master entry
    file and the map file.
  - Added autofs::masterfile defined type to replace deprecated
    autofs::master::map
    - autofs::masterfile creates a auto.master entry file in
      $autofs::master_conf_dir
    - Unlike autofs::map::master, autofs::masterfile does not have a $content
      parameter, because a user can simply use a file resource to specify
      a custom auto.master entry file.
  - Added autofs::mapfile defined type to replace deprecated
    autofs::master::entry
    - autofs::mapfile creates a mapfile for a direct mapping or one or
      more indirect mappings
    - Unlike autofs::master::entry, it does not have duplicate resource naming
      problems (wildcard or otherwise).
  - autofs class changes
    - Added the following new autofs service configuration parameters:
      - $master_wait
      - $mount_verbose
      - $mount_nfs_default_protocol
      - $force_standard_program_map_env
      - $use_hostname_for_mounts
      - $disable_not_found_message
      - $sss_master_map_wait
      - $use_mount_request_log_id
      - $auth_conf_file
      - $custom_autofs_conf_options